[package]
name = "natnet-decode"
version = "0.1.0"
authors = ["Jørgen Nordmoen <jorgehn@student.matnat.uio.no>"]
description = "Decode raw NatNet messages"

homepage = "https://github.com/nordmoen/natnet-decode"
repository = "https://github.com/nordmoen/natnet-decode.git"
documentation = "https://docs.rs/natnet-decode/"

keywords = ["natnet", "motive", "optitrack", "decode", "parse"]
license = "MIT"

[dependencies]
byteorder = "0.5"
clippy = { version = "0.0.95", optional = true}
log = "0.3"
nalgebra = "0.10"
semver = "0.4"

[dev-dependencies]
env_logger = "0.3"

[features]
default = []
